--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 python:
-  - "3.2"
-  - "2.7"
-  - "2.6"
+    #- "3.2"
+    - "2.7"
 # command to install dependencies
 install:
-  - "pip install . --use-mirrors"
-  - "pip install pylint --use-mirrors"
+    - "pip install . --use-mirrors"
+    - "pip install pylint --use-mirrors"
 # command to run tests
-script: pylint
+script:
+    - "pylint srcds/log.py"
+    - "pylint srcds/rcon.py"
