--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,5 @@ python:
 # command to install dependencies
 install:
     - "pip install . --use-mirrors"
-    - "pip install pylint --use-mirrors"
 # command to run tests
-script: "pylint -E --rcfile=.pylintrc srcds && nosetests"
+script: "nosetests"
