--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
 python:
-    #- "3.2"
-    - "2.7"
-# command to install dependencies
+  #- "3.2"
+  - 2.7
+
 install:
-    - "pip install . --use-mirrors"
-# command to run tests
-script: "nosetests"
+  - pip install . --use-mirrors
+  - pip install coveralls --use-mirrors
+
+script:
+  - nosetests --with-coverage
+
+after_success:
+  - coveralls
